syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";
import "google/protobuf/empty.proto";

message CreateOrderRequest {
  float price = 1;
  float tax = 2;
}

message CreateOrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message UpdateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message UpdateOrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message ListOrdersRequest {
  // Nenhum campo necess√°rio
}

message ListOrdersResponse {
  repeated CreateOrderResponse orders = 1;
}

message GetOrderByIdRequest {
  string id = 1;
}

message GetOrderByIdResponse {
  CreateOrderResponse order = 1;
}

message DeleteOrderRequest {
  string id = 1;
}

message DeleteOrderResponse {
  string id = 1;
  bool success = 2;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
  rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
  rpc GetOrderById (GetOrderByIdRequest) returns (GetOrderByIdResponse);
  rpc DeleteOrder (DeleteOrderRequest) returns (google.protobuf.Empty);
}